fix: use basic get index for ArrayList